--- a/ASS/index.html
+++ b/ASS/index.html
@@ -16,21 +16,37 @@
             <h1>Beach Party</h1>
          <ul class="menu">
      <p>Media</p>
-     <p>VIP</p>
      <p>Star Guests</p>
+     <p>VIP</p>
      <p>Sponsor</p>
     </ul>
+    <div class="text1">
+        <h1>24.04.2021</h1>
+        <h2>From 13:30 to midnight</h2>
+    </div>
     <div class="girl1">
         <img src="../ASS/img/girl1.png">
     </div>
     <div class="girl2">
         <img src="../ASS/img/girl2.png">
+    </div>
+        <div class="tree2">
+            <img src="../ASS/img/pngwing 2.png">
+        </div>
+        <div class="tree1">
+            <img src="../ASS/img/pngwing 1.png">
+        </div>
 
     </div>
      </div>
     </div>
-</div>
      <div class="frame2">
+        <div class="container_slider_css">
+            <img class="photo_slider_css" src="../ASS/img/image1.jpg "alt="">
+            <img class="photo_slider_css" src="../ASS/img/image 2.png" alt="">
+            <img class="photo_slider_css" src="../ASS/img/image 3.png" alt="">
+            <img class="photo_slider_css" src="../ASS/img/image 4.png" alt="">
+          </div>
      </div>
      <div class="frame3">
     </div>
@@ -39,5 +55,7 @@
     <div class="frame5">
     </div>
 
+  
+    </div>
 </body>
 </html>
