--- a/ASS/index.html
+++ b/ASS/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>  
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
@@ -8,54 +8,88 @@
 
 </head>
 <body>
-   
-    <div class="frame1">
-        
-     <div class="text">
-         <div class="main-menu">
+
+<div class="frame1">
+
+    <div class="text">
+        <div class="main-menu">
             <h1>Beach Party</h1>
-         <ul class="menu">
-     <p>Media</p>
-     <p>Star Guests</p>
-     <p>VIP</p>
-     <p>Sponsor</p>
-    </ul>
-    <div class="text1">
-        <h1>24.04.2021</h1>
-        <h2>From 13:30 to midnight</h2>
-    </div>
-    <div class="girl1">
-        <img src="../ASS/img/girl1.png">
-    </div>
-    <div class="girl2">
-        <img src="../ASS/img/girl2.png">
-    </div>
-        <div class="tree2">
-            <img src="../ASS/img/pngwing 2.png">
+            <ul class="menu">
+                <p><a href="#2"> Media</a></p>
+                <p><a href="#3">VIP</a></p>
+                <p><a href="#4">Buy tickets</a></p>
+            </ul>
+            <div class="text1">
+                <h1>24.04.2021</h1>
+                <h2>From 13:30 to midnight</h2>
+            </div>
+            <div class="girl1">
+                <img src="../ASS/img/girl1.png">
+            </div>
+            <div class="girl2">
+                <img src="../ASS/img/girl2.png">
+            </div>
+            <div class="tree2">
+                <img src="../ASS/img/pngwing 2.png">
+            </div>
+            <div class="tree1">
+                <img src="../ASS/img/pngwing 1.png">
+            </div>
+
         </div>
-        <div class="tree1">
-            <img src="../ASS/img/pngwing 1.png">
+    </div>
+</div>
+<div class="frame2" article id="2">
+    <div class="wrapper">
+        <input type="radio" name="point" id="slide1" checked>
+        <input type="radio" name="point" id="slide2">
+        <input type="radio" name="point" id="slide3">
+        <input type="radio" name="point" id="slide4">
+        <input type="radio" name="point" id="slide5">
+        <div class="slider">
+            <div class="slides slide1"></div>
+            <div class="slides slide2"></div>
+            <div class="slides slide3"></div>
+            <div class="slides slide4"></div>
+            <div class="slides slide5"></div>
+        </div>
+        <div class="controls">
+            <label for="slide1"></label>
+            <label for="slide2"></label>
+            <label for="slide3"></label>
+            <label for="slide4"></label>
+            <label for="slide5"></label>
+        </div>
+    </div>
+    <div class="frame3"article id="3">
+        <div class="text2">
+            <p>What you get if you buy VIP access</p>
+            <div class="text3">
+                <p>Free Drinks</p>
+                <p>VIP zone</p>
+                <p>And Other things</p>
+            </div>
+        </div>
+    </div>
+    <div class="frame4" article id="4">
+        <div class="wrap">
+            <button class="button">Buy ticket</button>
+        </div>
+        <div class="logo">
+            <div class="logo1">
+                <img src="img/pngwing3.png">
+            </div>
+            <div class="logo2">
+                <img src="img/pngwing4.png">
+            </div>
+            <div class="logo3">
+                <img src="img/pngwing5.png">
+            </div>
         </div>
 
     </div>
-     </div>
-    </div>
-     <div class="frame2">
-        <div class="container_slider_css">
-            <img class="photo_slider_css" src="../ASS/img/image1.jpg "alt="">
-            <img class="photo_slider_css" src="../ASS/img/image 2.png" alt="">
-            <img class="photo_slider_css" src="../ASS/img/image 3.png" alt="">
-            <img class="photo_slider_css" src="../ASS/img/image 4.png" alt="">
-          </div>
-     </div>
-     <div class="frame3">
-    </div>
-    <div class="frame4">
-    </div>
-    <div class="frame5">
-    </div>
 
-  
-    </div>
+
+</div>
 </body>
 </html>
