--- a/ASS/index.html
+++ b/ASS/index.html
@@ -69,6 +69,9 @@
                 <p>VIP zone</p>
                 <p>And Other things</p>
             </div>
+            <div class="Cocktail">
+                <img src="../ASS/img/cock.jpg">
+            </div>
         </div>
     </div>
     <div class="frame4" article id="4">
